[metadata]
name = prospect
version = attr: prospect.__version__
author = DESI Collaboration
author_email = desi-data@desi.lbl.gov
license = BSD-3-Clause
license_files = LICENSE.rst
url = https://github.com/desihub/prospect
description = DESI spectrum visualization package
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = True
github_project = desihub/prospect
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Jupyter
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Visualization

[options]
zip_safe = True
package_dir =
    =py
# find_namespace avoids a warning about data directories when building packages.
packages = find_namespace:
include_package_data = True
python_requires = >=3.10
# setup_requires = setuptools_scm
install_requires =
    bokeh
    specutils
scripts =
    bin/example_prospect_pages.sh
    bin/prospect_pages

# [options.entry_points]
# console_scripts =
#     prospect_pages = prospect.scripts.prospect_pages:main

[options.extras_require]
desi =
    desiutil
test =
    prospect[desi]
    pytest
coverage =
    prospect[test]
    pytest-cov
    coveralls
doc =
    Sphinx
    sphinx-rtd-theme

[options.package_data]
prospect =
    data/*
    js/*
    templates/*
prospect.test = t/*

[options.packages.find]
where = py
exclude = .github/*

[coverage:run]
relative_files = True
source =
    py/prospect
omit =
    py/prospect/_version.py
    py/prospect/conftest*
    py/prospect/test/*
    */prospect/_version.py
    */prospect/conftest*
    */prospect/test/*

# [coverage:paths]
# source =
#     py/prospect/
#     */site-packages/prospect/

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_

[pycodestyle]
# See https://pycodestyle.readthedocs.io/en/latest/intro.html#configuration
# for details of these configuration options.
#
# These are normally ignored by default:
# ignore = E121, E123, E126, E133, E226, E241, E242, E704, W503, W504
#
# In this package we ignore these, since there are *many* instances (>~100):
#
# E128 continuation line under-indented for visual indent
# E201 whitespace after '('
# E202 whitespace before ')'
# E203 whitespace before ':'
# E225 missing whitespace around operator
# E226 missing whitespace around arithmetic operator
# E231 missing whitespace after ','
# E251 unexpected spaces around keyword / parameter equals
# E261 at least two spaces before inline comment
# E265 block comment should start with '# '
# E501 line too long (125 > 120 characters)
max-line-length = 120
ignore = E128, E201, E202, E203, E225, E226, E231, E251, E261, E265, E501
